# causal-cone-engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
docs/: gamma_surface_instructions.md  graph_builder_instructions.md
docs/plans/: 2026-02-20-atmosphere-shadow-design.md  2026-02-20-atmosphere-shadow-plan.md
shaders/: field_sample.wgsl
src/: consumption.rs  field.rs  main.rs  observer.rs  renderer.rs
