[package]
name = "causal-cone-engine"
version = "0.1.0"
edition = "2021"
description = "Causal Cone Rendering Engine — diff-field rendering without raytracing"

[dependencies]
wgpu = "23"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"              # Math (vec3, mat4, quaternions)
log = "0.4"
env_logger = "0.11"
